2004-09-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinInt.h (TkWinDisplayChanged): added decl
	* win/tkWinX.c (TkWinDisplayChanged, TkpOpenDisplay): Correctly
	* win/tkWinWm.c (InvalidateSubTreeDepth, WmProc):     handle color
	and screen resolution changes.  Tested for 16/24/32 bpp changes on
	XP.  May need more fixes for 8bpp switch, use of special
	colormaps, or other special palette handling cases.  [Bug 223689]

2004-09-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tkInt.decls: Add decl for TkWinGetPlatformTheme.
	It is only defined under Win32.
	* generic/tkIntPlatDecls.h: Regen.
	* generic/tkStubInit.c: Regen.
	* win/tkWinInt.h: Define TK_THEME_WIN_CLASSIC and
	TK_THEME_WIN_XP.
	* win/tkWinMenu.c (DrawMenuEntryAccelerator, DrawMenuEntryLabel):
	Draw a disabled 3D text highlight for the accelerator only
	with the Win95/98 look. Same goes for the menu entry text.
	* win/tkWinX.c (TkWinGetPlatformId, TkWinGetPlatformTheme):
	Automatically detect the Windows theme in use and return
	either TK_THEME_WIN_CLASSIC or TK_THEME_WIN_XP when the
	TkWinGetPlatformTheme function is invoked.
	[Patch 866194]

2004-09-22  Vince Darley <vincentdarley@users.sourceforge.net>

	* win/tkWinMenu.c: only provide a submenu handle when the
	MF_POPUP flag is given, fixing a recently-introduced crash
	when submenus are disabled.  Also better error checking for
	this sort of situation in the future.
	
2004-09-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinMenu.c (ReconfigureWindowsMenu): Fix drawing of a disabled
	(TkWinHandleMenuEvent, DrawMenuEntryArrow): cascade menu arrow. Tk was
	displaying a disabled cascade menu arrow in black instead of
	gray. This was caused by a bug in the Win32 code for user drawn
	menu items. The fix is to avoid telling Windows that the menu item
	is a cascade type and then draw the gray arrow bitmap on our own.
	[Patch 865842]

2004-09-22  Mo DeJong  <mdejong@users.sourceforge.net>
